--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-SFPD": "BUILD_PATH=/cartridge/static/build react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
