--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
     "framer-motion": "^3.10.3",
+    "fs-extra": "^9.1.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
@@ -25,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-SFPD": "BUILD_PATH=/cartridge/static/build react-scripts build",
+    "build:SFPD": "react-scripts build && node moveBuildToCartridge.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
